refine layout of hero

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,10 @@
 ---
-
+import Hero from "$lib/components/Hero.astro"
+import BaseLayout from "$lib/layout/base.astro"
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<BaseLayout>
+	<main class="flex-grow h-full p-4">
+		<Hero />
+	</main>
+</BaseLayout>
