--- a/src/layout/base.astro
+++ b/src/layout/base.astro
@@ -5,9 +5,10 @@ import "@fontsource/geist-sans";
 
 interface Props {
   title?: string;
+  description?: string;
 }
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
 <html lang="en">
@@ -16,6 +17,12 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <meta
+      name="description"
+      content={description ??
+        "Brandon Ma is a manufacturing engineer and web developer."}
+    />
+    <link rel="sitemap" href="/sitemap-index.xml" />
     <title>{title ?? "Brandon Ma"}</title>
   </head>
   <body class="flex flex-col h-full">
