--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -4,6 +4,7 @@
 
 @layer base {
   :root {
+    --white: 220 14.3% 95.9%;
     --test: hsl(180, 14%, 96%);
     --background: 220 14.3% 95.9%;
     --foreground: 224 71.4% 4.1%;
@@ -38,7 +39,7 @@
   }
 
   .dark {
-    --background: 224 71.4% 4.1%;
+    --background: 224 10% 12%;
     --foreground: 210 20% 98%;
 
     --muted: 215 27.9% 16.9%;
@@ -70,7 +71,7 @@
 
   @media (prefers-color-scheme: dark) {
     :root {
-      --background: 224 71.4% 4.1%;
+      --background: 224 10% 12%;
       --foreground: 210 20% 98%;
 
       --muted: 215 27.9% 16.9%;
@@ -110,9 +111,9 @@
 
   html {
     height: 100svh;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-      Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-      sans-serif;
+    font-family: "Geist Sans", system-ui, -apple-system, BlinkMacSystemFont,
+      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+      "Helvetica Neue", sans-serif;
     font-size: 14px;
   }
 
