--- a/src/layout/main.astro
+++ b/src/layout/main.astro
@@ -7,21 +7,19 @@ type BaseLayoutProps = ComponentProps<typeof Base>;
 
 interface Props extends BaseLayoutProps {}
 
-const { title } = Astro.props;
+const { title, description } = Astro.props;
 ---
 
-<Base title={title}>
+<Base title={title} description={description}>
   <header class="p-2 pt-6 max-w-screen-lg w-full mx-auto flex flex-col gap-2">
     <div class="flex items-end justify-between w-full">
       <a href="/">
         <p id="logo" class="text-xl font-semibold">brandma</p>
       </a>
       <nav class="flex items-end gap-4 text-lg">
-        <a href="/blog" class="text-blue-500 hover:text-blue-600">Blog</a>
-        <a href="/projects" class="text-blue-500 hover:text-blue-600"
-          >Projects</a
-        >
-        <a href="/about" class="text-blue-500 hover:text-blue-600">About</a>
+        <a href="/blog" class="hover:text-blue-500">Blog</a>
+        <a href="/projects" class="hover:text-blue-500">Projects</a>
+        <a href="/about" class="hover:text-blue-500">About</a>
       </nav>
     </div>
     <div class="self-end">
