--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -3,13 +3,19 @@ import Article from "$lib/components/Article.astro";
 import Main from "$lib/layout/main.astro";
 import { getCollection } from "astro:content";
 
-const previewText =
-  "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.";
+const blogPosts = await getCollection("blog", (post) => {
+  if (!import.meta.env.PROD) {
+    return true;
+  }
 
-const blogPosts = await getCollection("blog");
+  return post.data.draft !== true;
+});
 ---
 
-<Main title="Blog - Brandon Ma">
+<Main
+  title="Blog - Brandon Ma"
+  description={"Blog ppnpmosts about programming and tech like Go, Typescript, and Svelte."}
+>
   <h1 class="text-4xl mb-8 mt-3">Blog</h1>
   <section id="articles" class="flex flex-col gap-6">
     {
@@ -22,23 +28,5 @@ const blogPosts = await getCollection("blog");
         />
       ))
     }
-    <Article
-      slug="article-1"
-      title={"Title"}
-      publishedAt={new Date()}
-      previewText={previewText}
-    />
-    <Article
-      slug="article-1"
-      title={"Title"}
-      publishedAt={new Date()}
-      previewText={previewText}
-    />
-    <Article
-      slug="article-1"
-      title={"Title"}
-      publishedAt={new Date()}
-      previewText={previewText}
-    />
   </section>
 </Main>
