--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -2,7 +2,10 @@
 import Main from "$lib/layout/main.astro";
 ---
 
-<Main title="About - Brandon Ma">
+<Main
+  title="About - Brandon Ma"
+  description="Profile for Brandon Ma, Manufacturing Engineer and developer."
+>
   <h1 class="text-2xl mb-8 mt-3">About Me</h1>
 
   <p class="leading-relaxed">
