--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -14,7 +14,7 @@ const blogPosts = await getCollection("blog", (post) => {
 
 <Main
   title="Blog - Brandon Ma"
-  description={"Blog ppnpmosts about programming and tech like Go, Typescript, and Svelte."}
+  description={"Blog posts about programming and tech like Go, Typescript, and Svelte."}
 >
   <h1 class="text-4xl mb-8 mt-3">Blog</h1>
   <section id="articles" class="flex flex-col gap-6">
