--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import BaseLayout from "$lib/layout/base.astro";
 ---
 
 <BaseLayout>
-  <main class="flex-grow h-full p-4">
+  <main class="grow h-full p-4">
     <Hero />
     <nav class="flex items-center justify-around text-xl sm:text-4xl py-6">
       <a href="/blog">Blog</a>
