fix some styles for fonts

--- a/src/components/BlogPreview.astro
+++ b/src/components/BlogPreview.astro
@@ -14,7 +14,7 @@ const displayDate = dayjs(publishedAt).format("MMMM DD, YYYY");
 ---
 
 <a href={`/blog/${slug}`}>
-  <article class="text-accent">
+  <article class="text-accent font-reading">
     <h3 class="text-lg max-w-[56ch] line-clamp-2">{title}</h3>
     <p class="font-light">{displayDate}</p>
   </article>
