--- a/src/layout/landing.astro
+++ b/src/layout/landing.astro
@@ -8,7 +8,7 @@ const { title, description } = Astro.props;
 ---
 
 <Base title={title} description={description} fitScreen>
-  <div class="md:p-24 lg:p-32 p-8">
+  <div class="md:p-16 md:py-16 lg:px-32 p-8">
     <slot />
   </div>
 </Base>
