--- a/src/layout/main-revamp.astro
+++ b/src/layout/main-revamp.astro
@@ -12,7 +12,7 @@ const { title, description } = Astro.props;
       class="p-2 pt-6 max-w-(--breakpoint-lg) w-full mx-auto flex items-center justify-between gap-2"
     >
       <a class="text-xl font-semibold" href="/">Home</a>
-      <nav class="flex items-end gap-4 text-lg">
+      <nav class="flex items-end gap-4 text-lg font-normal">
         <a href="/blog">Blog</a>
         <a href="/about">About</a>
       </nav>
