--- a/src/styles/app-revamp.css
+++ b/src/styles/app-revamp.css
@@ -11,6 +11,7 @@
   color utility to any element that depends on these defaults.
 */
 @layer base {
+
   *,
   ::after,
   ::before,
@@ -55,6 +56,10 @@
     --ring: 224 71.4% 4.1%;
 
     --radius: 0.5rem;
+
+    --font-sans: "Manrope Variable", system-ui, -apple-system, BlinkMacSystemFont,
+      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+      "Helvetica Neue", sans-serif;
   }
 
   html.light {
@@ -173,14 +178,12 @@
 @layer base {
   * {
     box-sizing: border-box;
-    @apply border-border;
+    @apply border-border font-normal;
   }
 
   html {
     height: 100svh;
-    font-family: "Manrope", system-ui, -apple-system, BlinkMacSystemFont,
-      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-      "Helvetica Neue", sans-serif;
+    font-family: var(--font-sans);
     font-size: 14px;
   }
 
