--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -2,6 +2,15 @@
 @config '../../tailwind.config.mjs';
 
 
+.blog-content h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Manrope Variable", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 .blog-content h1 {
   @apply text-2xl font-bold mb-10 text-foreground;
 }
