--- a/src/layout/base-revamp.astro
+++ b/src/layout/base-revamp.astro
@@ -16,7 +16,6 @@ const { title, description, fitScreen } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta
@@ -26,6 +25,12 @@ const { title, description, fitScreen } = Astro.props;
     />
     <link rel="sitemap" href="/sitemap-index.xml" />
     <title>{title ?? "Brandon Ma"}</title>
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+
     <meta property="og:title" content="Portfolio - Brandon Ma" />
     <meta
       property="og:description"
