--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -1,6 +1,5 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 @config '../../tailwind.config.mjs';
-
 
 .blog-content h1,
 h2,
@@ -8,11 +7,13 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Manrope Variable", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: "Manrope Variable", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+    sans-serif;
 }
 
 .blog-content h1 {
-  @apply text-2xl font-bold mb-10 text-foreground;
+  @apply text-2xl font-bold mb-2 text-foreground;
 }
 
 .blog-content h2 {
@@ -20,17 +21,16 @@ h6 {
 }
 
 .blog-content h3 {
-  @apply text-xl font-semibold my-2;
+  @apply text-lg font-semibold my-2;
 }
 
 .blog-content p {
-  @apply leading-relaxed py-3 max-w-[62ch];
+  @apply leading-relaxed py-3 max-w-[62ch] font-reading;
 }
 
 .blog-content a {
   @apply text-foreground underline;
 }
-
 
 blockquote {
   @apply border-l-4 border-foreground pl-4 my-4 bg-card rounded-r-md max-w-[70ch];
@@ -49,6 +49,15 @@ strong {
   margin-left: 1.5rem;
 }
 
+.blog-content ol {
+  list-style: decimal;
+  margin-left: 1.5rem;
+}
+
 .blog-content li {
-  @apply max-w-[62ch];
+  @apply max-w-[62ch] font-reading;
+}
+
+.published {
+  @apply mb-10;
 }
