--- a/src/layout/base-revamp.astro
+++ b/src/layout/base-revamp.astro
@@ -41,6 +41,13 @@ const { title, description, fitScreen } = Astro.props;
     <meta property="og:type" content="website" />
     <meta property="og:url" content={"https://brandonma.dev"} />
     <meta property="og:image" content="https://brandonma.dev/OG.png" />
+
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      title="Brandon Ma's Blog"
+      href="/rss.xml"
+    />
   </head>
   <body class:list={{ "h-[100svh]": fitScreen }}>
     <slot />
