--- a/src/components/BlogPreview.astro
+++ b/src/components/BlogPreview.astro
@@ -14,7 +14,7 @@ const { title, publishedAt, previewText, slug } = Astro.props;
 const displayDate = dayjs(publishedAt).add(7, "hours").format("MMMM DD, YYYY");
 ---
 
-<a href={`/blog/${slug}`}>
+<a href={`/blog/${slug}`} class="w-fit">
   <article class="text-accent font-reading">
     <h3 class="text-lg max-w-[56ch] line-clamp-2">{title}</h3>
     <p class="font-light">{displayDate}</p>
