--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -103,7 +103,7 @@ const latestPosts = blogPosts
               title={post.data.title}
               publishedAt={post.data.publishedAt}
               previewText={post.data.previewText}
-              slug={post.slug}
+              slug={post.id}
             />
           ))
         }
