--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -7,6 +7,7 @@ const result = Astro.getActionResult(actions.contact);
 ---
 
 <Main
+  canonical="https://brandonma.dev/about"
   title="About - Brandon Ma"
   description="Profile for Brandon Ma, Manufacturing Engineer and developer."
 >
@@ -68,7 +69,7 @@ const result = Astro.getActionResult(actions.contact);
       }
     </form>
   </div>
-</Main>
+</Main>c
 
 <style>
   #about p {
