--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -20,6 +20,7 @@ blogPosts.sort((a, b) => {
 ---
 
 <Main
+  canonical="https://brandonma.dev/blog"
   title="Blog - Brandon Ma"
   description={"Blog posts about programming and tech like Go, Typescript, and Svelte."}
 >
@@ -36,4 +37,4 @@ blogPosts.sort((a, b) => {
       ))
     }
   </section>
-</Main>
+</Main>ca
