--- a/src/styles/app-revamp.css
+++ b/src/styles/app-revamp.css
@@ -60,9 +60,10 @@
 
     --radius: 0.5rem;
 
-    --font-sans: "Manrope Variable", system-ui, -apple-system,
-      BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-      "Open Sans", "Helvetica Neue", sans-serif;
+    --font-sans:
+      "Manrope Variable", system-ui, -apple-system, BlinkMacSystemFont,
+      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+      "Helvetica Neue", sans-serif;
   }
 
   html.light {
