--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -7,8 +7,18 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Manrope Variable", system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+  font-family:
+    "Manrope Variable",
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
     sans-serif;
 }
 
@@ -58,7 +68,7 @@ strong {
   @apply max-w-[62ch] font-reading;
 }
 
-.blog-content p>code {
+.blog-content p > code {
   @apply bg-secondary text-foreground px-1 py-0.5 rounded-md;
 }
 
