--- a/src/layout/main.astro
+++ b/src/layout/main.astro
@@ -6,7 +6,7 @@ import ThemeToggle from "$lib/components/ThemeToggle.astro";
 
 type BaseLayoutProps = ComponentProps<typeof Base>;
 
-interface Props extends BaseLayoutProps {}
+type Props = BaseLayoutProps;
 
 const { title, description, canonical } = Astro.props;
 ---
