--- a/src/layout/main-revamp.astro
+++ b/src/layout/main-revamp.astro
@@ -3,10 +3,10 @@ import type { ComponentProps } from "astro/types";
 import Base from "./base-revamp.astro";
 
 type Props = ComponentProps<typeof Base>;
-const { title, description } = Astro.props;
+const { title, description, canonical } = Astro.props;
 ---
 
-<Base title={title} description={description}>
+<Base title={title} description={description} canonical={canonical}>
   <div class="h-full">
     <header
       class="p-2 pt-6 max-w-(--breakpoint-lg) w-full mx-auto flex items-center justify-between gap-2"
