--- a/src/styles/app-revamp.css
+++ b/src/styles/app-revamp.css
@@ -11,6 +11,7 @@
   color utility to any element that depends on these defaults.
 */
 @layer base {
+
   *,
   ::after,
   ::before,
@@ -64,6 +65,11 @@
       "Manrope Variable", system-ui, -apple-system, BlinkMacSystemFont,
       "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
       "Helvetica Neue", sans-serif;
+
+
+
+    --alert-info: 213 94% 88%;
+    --alert-info-foreground: 213 94% 30%;
   }
 
   html.light {
@@ -100,6 +106,9 @@
     --ring: 224 71.4% 4.1%;
 
     --radius: 0.5rem;
+
+    --alert-info: 213 94% 78%;
+    --alert-info-foreground: 213 94% 40%;
   }
 
   /* html.dark {
