feature: upgrade to tailwind v4

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -82,7 +82,7 @@ const latestPosts = blogPosts
       </svg>
 
       <svg
-        class="absolute -bottom-4 -right-0 w-[50px] h-[50px] rotate-180"
+        class="absolute -bottom-4 right-0 w-[50px] h-[50px] rotate-180"
         viewBox="0 0 100 100"
         xmlns="http://www.w3.org/2000/svg"
       >
