--- a/src/layout/base-revamp.astro
+++ b/src/layout/base-revamp.astro
@@ -51,7 +51,7 @@ const { title, description, fitScreen, canonical } = Astro.props;
     />
     {canonical && <link rel="canonical" href={canonical} />}
   </head>
-  <body class:list={{ "h-[100svh]": fitScreen }}>
+  <body class:list={{ "h-svh": fitScreen }}>
     <slot />
   </body>
 </html>
