--- a/src/styles/app-revamp.css
+++ b/src/styles/app-revamp.css
@@ -1,116 +1,136 @@
 @import "tailwindcss";
 
-@config '../../tailwind.config.mjs';
+/* @config '../../tailwind.config.mjs'; */
 
-/*
-  The default border color has changed to `currentColor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
+@custom-variant dark (&:is(.dark *));
 
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
-@layer base {
+:root {
+  --white: hsl(220 14.3% 95.9%);
+  --background: hsl(27 100% 98%);
+  --foreground: hsl(13 77% 55%);
+  --accent: hsl(208 18% 21%);
 
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentColor);
-  }
+  --muted: hsl(220 14.3% 95.9%);
+  --muted-foreground: hsl(220 8.9% 46.1%);
+
+  --popover: hsl(0 0% 100%);
+  --popover-foreground: hsl(224 71.4% 4.1%);
+
+  --card: hsl(0 0% 100%);
+  --card-foreground: hsl(224 71.4% 4.1%);
+
+  --border: hsl(220 13% 91%);
+  --input: hsl(220 13% 91%);
+
+  --primary: hsl(220.9 39.3% 11%);
+  --primary-foreground: hsl(210 20% 98%);
+
+  --secondary: hsl(220 14.3% 95.9%);
+  --secondary-foreground: hsl(220.9 39.3% 11%);
+
+  /* --accent:hsl (220 14.3% 95.9%); */
+  --accent-foreground: hsl(220.9 39.3% 11%);
+
+  --destructive: hsl(0 72.2% 50.6%);
+  --destructive-foreground: hsl(210 20% 98%);
+
+  --ring: hsl(224 71.4% 4.1%);
+
+  --radius: 0.5rem;
+
+  --font-sans:
+    "Manrope Variable", system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
+
+  --alert-info: hsl(213 94% 88%);
+  --alert-info-foreground: hsl(213 94% 30%);
 }
 
-@theme {
+html.light {
+  --white: hsl(220 14.3% 95.9%);
+  --background: hsl(27 100% 98%);
+  --foreground: hsl(13 77% 55%);
+  --accent: hsl(208 18% 21%);
+
+  --muted: hsl(220 14.3% 95.9%);
+  --muted-foreground: hsl(220 8.9% 46.1%);
+
+  --popover: hsl(0 0% 100%);
+  --popover-foreground: hsl(224 71.4% 4.1%);
+
+  --card: hsl(0 0% 100%);
+  --card-foreground: hsl(224 71.4% 4.1%);
+
+  --border: hsl(220 13% 91%);
+  --input: hsl(220 13% 91%);
+
+  --primary: hsl(220.9 39.3% 11%);
+  --primary-foreground: hsl(210 20% 98%);
+
+  --secondary: hsl(220 14.3% 95.9%);
+  --secondary-foreground: hsl(220.9 39.3% 11%);
+
+  --accent: hsl(220 14.3% 95.9%);
+  --accent-foreground: hsl(220.9 39.3% 11%);
+
+  --destructive: hsl(0 72.2% 50.6%);
+  --destructive-foreground: hsl(210 20% 98%);
+
+  --ring: hsl(224 71.4% 4.1%);
+
+  --radius: 0.5rem;
+
+  --alert-info: hsl(213 94% 78%);
+  --alert-info-foreground: hsl(213 94% 40%);
+}
+
+@theme inline {
   --breakpoint-xsm: 480px;
+
+  --radius-sm: calc(var(--radius) - 4px);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-lg: var(--radius);
+  --radius-xl: calc(var(--radius) + 4px);
+
+  /* Colors */
+  --color-background: var(--background);
+  --color-foreground: var(--foreground);
+  --color-muted: var(--muted);
+  --color-muted-foreground: var(--muted-foreground);
+  --color-popover: var(--popover);
+  --color-popover-foreground: var(--popover-foreground);
+  --color-card: var(--card);
+  --color-card-foreground: var(--card-foreground);
+  --color-border: var(--border);
+  --color-input: var(--input);
+  --color-primary: var(--primary);
+  --color-primary-foreground: var(--primary-foreground);
+  --color-secondary: var(--secondary);
+  --color-secondary-foreground: var(--secondary-foreground);
+  --color-accent: var(--accent);
+  --color-accent-foreground: var(--accent-foreground);
+  --color-destructive: var(--destructive);
+  --color-destructive-foreground: var(--destructive-foreground);
+  --color-ring: var(--ring);
+  --color-radius: var(--radius);
+  --color-sidebar: var(--sidebar);
+  --color-sidebar-foreground: var(--sidebar-foreground);
+  --color-sidebar-primary: var(--sidebar-primary);
+  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+  --color-sidebar-accent: var(--sidebar-accent);
+  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+  --color-sidebar-border: var(--sidebar-border);
+  --color-sidebar-ring: var(--sidebar-ring);
+  --color-alert-info: var(--alert-info);
+  --color-alert-info-foreground: var(--alert-info-foreground);
+
+  --font-reading:
+    system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 @layer base {
-  :root {
-    --white: 220 14.3% 95.9%;
-    --test: hsl(180, 14%, 96%);
-    --background: 27 100% 98%;
-    --foreground: 13 77% 55%;
-    --accent: 208 18% 21%;
-
-    --muted: 220 14.3% 95.9%;
-    --muted-foreground: 220 8.9% 46.1%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 224 71.4% 4.1%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 224 71.4% 4.1%;
-
-    --border: 220 13% 91%;
-    --input: 220 13% 91%;
-
-    --primary: 220.9 39.3% 11%;
-    --primary-foreground: 210 20% 98%;
-
-    --secondary: 220 14.3% 95.9%;
-    --secondary-foreground: 220.9 39.3% 11%;
-
-    /* --accent: 220 14.3% 95.9%; */
-    --accent-foreground: 220.9 39.3% 11%;
-
-    --destructive: 0 72.2% 50.6%;
-    --destructive-foreground: 210 20% 98%;
-
-    --ring: 224 71.4% 4.1%;
-
-    --radius: 0.5rem;
-
-    --font-sans:
-      "Manrope Variable", system-ui, -apple-system, BlinkMacSystemFont,
-      "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
-      "Helvetica Neue", sans-serif;
-
-
-
-    --alert-info: 213 94% 88%;
-    --alert-info-foreground: 213 94% 30%;
-  }
-
-  html.light {
-    --white: 220 14.3% 95.9%;
-    --test: hsl(180, 14%, 96%);
-    --background: 27 100% 98%;
-    --foreground: 13 77% 55%;
-    --accent: 208 18% 21%;
-
-    --muted: 220 14.3% 95.9%;
-    --muted-foreground: 220 8.9% 46.1%;
-
-    --popover: 0 0% 100%;
-    --popover-foreground: 224 71.4% 4.1%;
-
-    --card: 0 0% 100%;
-    --card-foreground: 224 71.4% 4.1%;
-
-    --border: 220 13% 91%;
-    --input: 220 13% 91%;
-
-    --primary: 220.9 39.3% 11%;
-    --primary-foreground: 210 20% 98%;
-
-    --secondary: 220 14.3% 95.9%;
-    --secondary-foreground: 220.9 39.3% 11%;
-
-    --accent: 220 14.3% 95.9%;
-    --accent-foreground: 220.9 39.3% 11%;
-
-    --destructive: 0 72.2% 50.6%;
-    --destructive-foreground: 210 20% 98%;
-
-    --ring: 224 71.4% 4.1%;
-
-    --radius: 0.5rem;
-
-    --alert-info: 213 94% 78%;
-    --alert-info-foreground: 213 94% 40%;
-  }
-
   /* html.dark {
     --background: 27 100% 98%;
     --foreground: 13 77% 55%;
@@ -119,26 +139,26 @@
     --muted: 215 27.9% 16.9%;
     --muted-foreground: 217.9 10.6% 64.9%;
 
-    --popover: 224 71.4% 4.1%;
-    --popover-foreground: 210 20% 98%;
+    --popover: hsl(224 71.4% 4.1%);
+    --popover-foreground: hsl(210 20% 98%);
 
-    --card: 224 71.4% 4.1%;
-    --card-foreground: 210 20% 98%;
+    --card: hsl(224 71.4% 4.1%);
+    --card-foreground: hsl(210 20% 98%);
 
     --border: 215 27.9% 16.9%;
     --input: 215 27.9% 16.9%;
 
-    --primary: 210 20% 98%;
-    --primary-foreground: 220.9 39.3% 11%;
+    --primary: hsl(210 20% 98%);
+    --primary-foreground: hsl(220.9 39.3% 11%);
 
     --secondary: 215 27.9% 16.9%;
-    --secondary-foreground: 210 20% 98%;
+    --secondary-foreground: hsl(210 20% 98%);
 
     --accent: 215 27.9% 16.9%;
-    --accent-foreground: 210 20% 98%;
+    --accent-foreground: hsl(210 20% 98%);
 
     --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 210 20% 98%;
+    --destructive-foreground: hsl(210 20% 98%);
 
     --ring: 216 12.2% 83.9%;
   } */
@@ -152,26 +172,26 @@
       --muted: 215 27.9% 16.9%;
       --muted-foreground: 217.9 10.6% 64.9%;
 
-      --popover: 224 71.4% 4.1%;
-      --popover-foreground: 210 20% 98%;
+      --popover: hsl(224 71.4% 4.1%);
+      --popover-foreground: hsl(210 20% 98%);
 
-      --card: 224 71.4% 4.1%;
-      --card-foreground: 210 20% 98%;
+      --card: hsl(224 71.4% 4.1%);
+      --card-foreground: hsl(210 20% 98%);
 
       --border: 215 27.9% 16.9%;
       --input: 215 27.9% 16.9%;
 
-      --primary: 210 20% 98%;
-      --primary-foreground: 220.9 39.3% 11%;
+      --primary: hsl(210 20% 98%);
+      --primary-foreground: hsl(220.9 39.3% 11%);
 
       --secondary: 215 27.9% 16.9%;
-      --secondary-foreground: 210 20% 98%;
+      --secondary-foreground: hsl(210 20% 98%);
 
       --accent: 215 27.9% 16.9%;
-      --accent-foreground: 210 20% 98%;
+      --accent-foreground: hsl(210 20% 98%);
 
       --destructive: 0 62.8% 30.6%;
-      --destructive-foreground: 210 20% 98%;
+      --destructive-foreground: hsl(210 20% 98%);
 
       --ring: 216 12.2% 83.9%;
     } */
@@ -203,12 +223,6 @@
   body {
     @apply bg-background text-foreground;
   }
-
-  /* 
-  p {
-    margin: 0;
-    padding: 0;
-  } */
 
   @media screen and (min-width: 640px) {
     html {
